--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^7.18.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "mocha": "^8.2.1",
+    "supertest": "^6.1.3"
   }
 }
