--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-subset": "^1.6.0",
     "eslint": "^7.18.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^8.2.1",
