--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "joi": "^17.3.0",
     "knex": "^0.21.12",
     "morgan": "~1.9.1",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
