--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "mocha"
+    "start": "nodemon ./src/index.js",
+    "test": "mocha",
+    "integration": "mocha ./test/integration/*.test.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
