--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "mocha",
+    "test": "mocha ./test/unit/*.test.js",
     "integration": "mocha ./test/integration/*.test.js"
   },
   "dependencies": {
