--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "joi": "^17.3.0",
     "knex": "^0.21.12",
     "morgan": "~1.9.1",
-    "sqlite3": "^5.0.0",
+    "mysql2": "^2.2.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.18.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^8.2.1",
