--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "nodemon ./src/index.js",
-    "test": "mocha ./test/unit/*.test.js",
-    "integration": "mocha ./test/integration/*.test.js"
+    "devStart": "nodemon --experimental-specifier-resolution=node ./src/index.js",
+    "start": "node --experimental-specifier-resolution=node ./src/index.js",
+    "test": "mocha --experimental-specifier-resolution=node ./test/unit/*.test.js",
+    "integration": "mocha --experimental-specifier-resolution=node ./test/integration/*.test.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "joi": "^17.3.0",
@@ -22,7 +25,6 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
-    "dotenv": "^10.0.0",
     "eslint": "^7.18.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^8.2.1",
