--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "devStart": "nodemon --experimental-specifier-resolution=node ./src/index.js",
+    "devStart": "NODE_ENV=development nodemon --experimental-specifier-resolution=node ./src/index.js",
     "start": "node --experimental-specifier-resolution=node ./src/index.js",
-    "test": "mocha --experimental-specifier-resolution=node ./test/unit/*.test.js",
-    "integration": "mocha --experimental-specifier-resolution=node ./test/integration/*.test.js"
+    "test": "NODE_ENV=test mocha --experimental-specifier-resolution=node ./test/unit/*.test.js",
+    "integration": "NODE_ENV=test mocha --experimental-specifier-resolution=node ./test/integration/tests.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -17,6 +18,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
@@ -29,6 +31,7 @@
     "eslint-config-google": "^0.14.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
+    "superagent-defaults": "^0.1.14",
     "supertest": "^6.1.3"
   }
 }
