--- a/deploy/infrastructure/package.json
+++ b/deploy/infrastructure/package.json
@@ -11,12 +11,10 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.116.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "aws-cdk": "1.116.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^26.4.2",
@@ -25,15 +23,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^1.116.0",
-    "@aws-cdk/aws-codepipeline": "^1.116.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.116.0",
-    "@aws-cdk/aws-ec2": "^1.116.0",
-    "@aws-cdk/aws-ecr": "^1.117.0",
-    "@aws-cdk/aws-iam": "^1.116.0",
-    "@aws-cdk/aws-lambda": "^1.116.0",
-    "@aws-cdk/aws-rds": "^1.116.0",
-    "@aws-cdk/core": "1.116.0",
+    "aws-cdk-lib": "^2.8.0",
+    "constructs": "^10.0.38",
     "source-map-support": "^0.5.16"
   }
 }
