--- a/deploy/config/buildspec.yaml
+++ b/deploy/config/buildspec.yaml
@@ -23,6 +23,7 @@ phases:
     commands:
       - echo "Cleaning up environment"
       - make clean
+      - rm -rf node_modules
 
 artifacts:
   files:
