Fixed issues with deployment code and buildspec

--- a/deploy/config/buildspec-deploy.yaml
+++ b/deploy/config/buildspec-deploy.yaml
@@ -5,11 +5,11 @@ phases:
     commands:
       - echo "Installing required tools"
       - npm install -g knex
-      - sudo apt-get update
-      - sudo apt-get install -y apt-transport-https ca-certificates curl
-      - sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
-      - echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
-      - sudo apt-get update && sudo apt-get install -y kubectl jq gettext-base
+      - apt-get update
+      - apt-get install -y apt-transport-https ca-certificates curl
+      - curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
+      - echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list
+      - apt-get update && apt-get install -y kubectl jq gettext-base
       - echo "Updating kubeconfig file"
       - aws eks update-kubeconfig --name ${EKS_CLUSTER_NAME}
   pre_build:
