--- a/deploy/config/buildspec-deploy.yaml
+++ b/deploy/config/buildspec-deploy.yaml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo "Installing required tools"
-      - npm install -g knex
+      - npm install knex
       - apt-get update
       - apt-get install -y apt-transport-https ca-certificates curl
       - curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
