--- a/deploy/config/manifest.yaml
+++ b/deploy/config/manifest.yaml
@@ -100,7 +100,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/group.name: task-list
 spec:
   rules:
