--- a/deploy/config/manifest.yaml
+++ b/deploy/config/manifest.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: task-list
+  labels:
+    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
 
 ---
 
@@ -72,6 +74,11 @@ spec:
             optional: false
         ports:
         - containerPort: 3000
+        lifecycle:
+          preStop:
+            exec:
+              command: ["/bin/sh", "-c", "sleep 70"]
+      terminationGracePeriodSeconds: 120
       serviceAccountName: task-list-api
 
 ---
@@ -101,13 +108,16 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/certificate-arn: ${ACM_CERT_ARN}
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/ssl-redirect: '443'
+    alb.ingress.kubernetes.io/healthcheck-path: '/api/v1/health'
+    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
+    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
     alb.ingress.kubernetes.io/group.name: task-list
 spec:
   rules:
-  - http:
+  - host: tasklist.kevinf.xyz
+    http:
       paths:
       - path: /api/
         pathType: Prefix
