Moved configuration files and removed CDK code

--- a/files/deploy.yaml
+++ b/files/deploy.yaml
@@ -5,15 +5,10 @@ phases:
     commands:
       - echo "Get EKS cluster version"
       - CLUSTER_VERSION=`aws eks describe-cluster --name ${EKS_CLUSTER_NAME} | jq -r .cluster.version`
-      - KUBECTL_VERSION=${CLUSTER_VERSION}.0-00
       - echo "Installing required tools"
       - pip install pipenv
       - pipenv install --dev
-      - apt-get update
-      - apt-get install -y apt-transport-https ca-certificates curl
-      - curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
-      - echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list
-      - apt-get update && apt-get install -y kubectl=${KUBECTL_VERSION} jq gettext-base
+      - curl -LO https://dl.k8s.io/release/v${CLUSTER_VERSION}.0/bin/linux/amd64/kubectl && chmod +x kubectl
       - echo "Updating kubeconfig file"
       - aws eks update-kubeconfig --name ${EKS_CLUSTER_NAME}
   pre_build:
@@ -29,4 +24,4 @@ phases:
       - export ACCESS_TOKEN_SECRET=`echo -n ${ACCESS_TOKEN_SECRET} | base64`
       - export REFRESH_TOKEN_SECRET=`echo -n ${REFRESH_TOKEN_SECRET} | base64`
       - echo "Deploying manifest file"
-      - envsubst < deploy/config/manifest.yaml | kubectl apply -f -
+      - envsubst < files/manifest.yaml | ./kubectl apply -f -
